--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -16,8 +16,7 @@
     <main>
         <article id="mainRight">
             <section>
-                <h3><b>LLM: Enhancing Knowledge Base Bots with Fine-Tuned LLM, Retrieval Augmentation, and AI Agent
-                        Integration</b></h3>
+                <h3><b>Enhancing Knowledge Base Bots with Fine-Tuned LLM, Retrieval Augmentation, and AI Agent Integration</b></h3>
                 <p>
                     Leading an innovative project utilizing "Llama-3 70B" to develop a specialized company knowledge
                     base bot. The project focuses on addressing parametric knowledge limitations, fine-tuning with
@@ -55,18 +54,9 @@
                 </p>
             </section>
             <section>
-                <h3><b>AI Chatbot powered by a Large Language Model</b></h3>
+                <h3><b>AI Integration Showcase - Multi-Cloud AI Synergy with a Full-Stack Integration</b></h3>
                 <p>
-                    Created a chatbot that responds to user queries using natural language. Used a state-of-the-art
-                    language model, Falcon-7B, fine-tuned on a custom Q&A dataset with QLoRA, specifically Chatbot
-                    customer support FAQs from an E-commerce website. Compared the performance of the untrained and
-                    trained models by evaluating their responses to various prompts. Deployed the model to a secure AWS
-                    Sagemaker for real-time inference requests. Built a web app using Azure Function and Static Web apps
-                    to showcase the chatbot functionality. Uploaded the trained model to the Hugging Face Hub for later
-                    consumption.
-                </p>
-                <p>
-                    <a href="https://github.com/lyoh001/DLFalcon"><b>View GitHub</b></a>
+                    Pioneering the integration of Large Language Models (LLMs) within a sophisticated multi-cloud framework, this project stands at the vanguard of AI-driven innovation. It exemplifies the harmonious fusion of advanced AI with dynamic web application frameworks, redefining the benchmarks of technological synergy. The initiative has achieved a notable breakthrough by creating a scalable, high-availability AI ecosystem that operates seamlessly across diverse cloud platforms, including AWS, Azure, and local infrastructures, while also delivering a rich, multi-model AI experience and ensuring rapid user engagement with exceptional system responsiveness.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -90,13 +80,40 @@
                             alt="" /></a>
                 </p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
-                    <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/KjaqoMD_pPE?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
                 </p>
+            </section>
+            <section>
+                <h3><b>AI-Powered Online Report Generator</b></h3>
+                <p>
+                    Pioneering an AI-driven online report generation tool designed to revolutionize the creation of student annual report cards for educators. The intuitive web interface allows for seamless generation of detailed reports through a simple selection process, powered by advanced generative AI to personalize and expedite documentation. This innovation underscores my expertise in AI, web development, and UI design, demonstrating a commitment to enhancing educational workflows and productivity with cutting-edge technology.
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazonaws" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
-                    <iframe src="https://www.youtube.com/embed/-vD_kHpCwRY?start=0" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/8EnwrZxy5tk?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
