--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -49,12 +49,11 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/ypiDyAuOo-k?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>AI Integration Showcase - Multi-Cloud AI Synergy with a Full-Stack Integration</b></h3>
@@ -82,12 +81,11 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/KjaqoMD_pPE?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>AI-Powered Online Report Generator</b></h3>
@@ -115,12 +113,11 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/8EnwrZxy5tk?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>A Key to Unlocking Cloud Cost Analysis and Optimization using Machine Learning</b>
@@ -160,12 +157,11 @@
                     </p>
                     <p><img src="/devopsportfolio/images/azureetl.png"
                             style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/XfcVUTvRDS4?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>Azure Onboarding System with a New Landing Zone</b></h3>
