--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -44,12 +44,11 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/ypiDyAuOo-k?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>LLM: AI Integration Showcase - Multi-Cloud AI Synergy with a Full-Stack Integration</b></h3>
@@ -77,12 +76,11 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/KjaqoMD_pPE?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>LLM: AI-Powered Online Report Generator</b></h3>
@@ -110,12 +108,11 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/8EnwrZxy5tk?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>LLM: AI Chatbot powered by a Large Language Model</b></h3>
@@ -152,18 +149,16 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/-vD_kHpCwRY?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>LLM: Disaster Detection and Response with Large Language Models</b></h3>
@@ -201,12 +196,11 @@
                     </p>
                     <p><img src="/mlportfolio/images/nlp.png"
                             style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/qzahWP6cCK0?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
@@ -228,12 +222,11 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/LQIE_r-WgI8?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>RNN: A Key to Unlocking Cloud Cost Analysis and Optimization using Machine Learning</b>
@@ -268,12 +261,11 @@
                     </p>
                     <p><img src="/mlportfolio/images/lstm.png"
                             style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/XfcVUTvRDS4?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>CNN: Accurate COVID-19 Detection using Machine Learning</b></h3>
@@ -301,12 +293,11 @@
                     </p>
                     <p><img src="/mlportfolio/images/cnn.png"
                             style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/tq-5nzUaQFA?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>ANN: Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
@@ -344,12 +335,11 @@
                     </p>
                     <p><img src="/mlportfolio/images/ann.png"
                             style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
-                    <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/asOnUFHlvZw?start=554" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                    </p>
+                            allowfullscreen></iframe>
+                    </div>
                 </section>
                 <section>
                     <h3><b>MLOps: Machine Learning for Maternal Risk</b></h3>
