--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -155,8 +155,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/devopsportfolio/images/azureetl.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/devopsportfolio/images/azureetl.png" class="section-image">
                     <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/XfcVUTvRDS4?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -189,8 +188,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/devopsportfolio/images/azureonboard.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/devopsportfolio/images/azureonboard.png" class="section-image">
                 </section>
                 <section>
                     <h3><b>Automated AWS Onboarding System with SNS Notifications</b></h3>
@@ -222,8 +220,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/devopsportfolio/images/awsonboard.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/devopsportfolio/images/awsonboard.png" class="section-image">
                 </section>
                 <section>
                     <h3><b>Monitoring and Alerting in Azure</b></h3>
@@ -251,8 +248,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/devopsportfolio/images/azuremonitor.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
+                    <img src="/devopsportfolio/images/azuremonitor.png" class="section-image">
                     </p>
                 </section>
                 <section>
@@ -281,8 +277,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/devopsportfolio/images/azurerbac.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
+                    <img src="/devopsportfolio/images/azurerbac.png" class="section-image">
                     </p>
                 </section>
                 <section>
@@ -310,8 +305,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/devopsportfolio/images/azurebill.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
+                    <img src="/devopsportfolio/images/azurebill.png" class="section-image">
                     </p>
                 </section>
                 <section>
@@ -343,8 +337,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/devopsportfolio/images/azuregofex.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/devopsportfolio/images/azuregofex.png" class="section-image">
                 </section>
                 <section>
                     <h3><b>Analyzing and Streamlining LMS Automation in Azure</b></h3>
@@ -372,8 +365,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/devopsportfolio/images/azurelms.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/devopsportfolio/images/azurelms.png" class="section-image">
                 </section>
                 <section>
                     <h3><b>Infrastructure as Code</b></h3>
