--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -194,8 +194,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/mlportfolio/images/nlp.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/mlportfolio/images/nlp.png" class="section-image">
                     <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/qzahWP6cCK0?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -259,8 +258,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/mlportfolio/images/lstm.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/mlportfolio/images/lstm.png" class="section-image">
                     <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/XfcVUTvRDS4?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -291,8 +289,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/mlportfolio/images/cnn.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/mlportfolio/images/cnn.png" class="section-image">
                     <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/tq-5nzUaQFA?start=0" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -333,8 +330,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/mlportfolio/images/ann.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/mlportfolio/images/ann.png" class="section-image">
                     <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/asOnUFHlvZw?start=554" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -371,8 +367,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/mlportfolio/images/swa.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                    <img src="/mlportfolio/images/swa.png" class="section-image">
                 </section>
                 <section>
                     <h3><b>ETL: An Analysis of Azure IaaS for Savings</b></h3>
@@ -408,8 +403,7 @@
                         <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                                 alt="" /></a>
                     </p>
-                    <p><img src="/mlportfolio/images/etl.png"
-                            style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
+                    <img src="/mlportfolio/images/etl.png" class="section-image">
                     </p>
                 </section>
                 <section>
