--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             <div class="u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                     <h3 class="u-text u-text-default u-text-1">JOHN YOHAN LEE'S</h3>
-                    <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2">ML & DevOps
-                        Portfolio Showcase
+                    <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2">ML & DevOps Portfolios
                     </h1>
                 </div>
             </div>
