--- a/index.html
+++ b/index.html
@@ -1,57 +1,27 @@
+<!DOCTYPE html>
 <html>
-
 <head>
     <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>John Yohan Lee</title>
 </head>
-
 <body class="u-body">
     <section class="u-align-center u-clearfix u-grey-90 u-section-2">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <img class="u-image u-image-default u-image-1" src="/images/cloud.png" alt="" data-image-width="1620"
-                data-image-height="1080">
+            <img class="u-image u-image-default u-image-1" src="/images/cloud.png" alt="" data-image-width="1620" data-image-height="1080">
             <div class="u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                    <h3 class="u-text u-text-default u-text-1">JOHN YOHAN LEE'S</h3>
-                    <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2">ML & DevOps Portfolios
-                    </h1>
+                    <h3 class="u-text u-text-1">JOHN YOHAN LEE'S</h3>
+                    <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2">ML & DevOps Portfolios</h1>
                 </div>
             </div>
             <div class="u-align-left u-container-style u-expanded-width-xs u-group u-group-2">
                 <div class="u-container-layout u-valign-top u-container-layout-3">
-                    <a href="https://lyoh001.com/mlportfolio"
-                        class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2">ML
-                        Portfolio&nbsp;<span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512"
-                                x="0px" y="0px" style="width: 1em; height: 1em;">
-                                <g>
-                                    <g>
-                                        <path
-                                            d="M506.134,241.843c-0.006-0.006-0.011-0.013-0.018-0.019l-104.504-104c-7.829-7.791-20.492-7.762-28.285,0.068    c-7.792,7.829-7.762,20.492,0.067,28.284L443.558,236H20c-11.046,0-20,8.954-20,20c0,11.046,8.954,20,20,20h423.557    l-70.162,69.824c-7.829,7.792-7.859,20.455-0.067,28.284c7.793,7.831,20.457,7.858,28.285,0.068l104.504-104    c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z">
-                                        </path>
-                                    </g>
-                                </g>
-                            </svg>
-                        </span>
-                    </a>
-                    <a href="https://lyoh001.com/devopsportfolio"
-                        class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2">DevOps
-                        Portfolio&nbsp;<span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512"
-                                x="0px" y="0px" style="width: 1em; height: 1em;">
-                                <g>
-                                    <g>
-                                        <path
-                                            d="M506.134,241.843c-0.006-0.006-0.011-0.013-0.018-0.019l-104.504-104c-7.829-7.791-20.492-7.762-28.285,0.068    c-7.792,7.829-7.762,20.492,0.067,28.284L443.558,236H20c-11.046,0-20,8.954-20,20c0,11.046,8.954,20,20,20h423.557    l-70.162,69.824c-7.829,7.792-7.859,20.455-0.067,28.284c7.793,7.831,20.457,7.858,28.285,0.068l104.504-104    c0.006-0.006,0.011-0.013,0.018-0.019C513.968,262.339,513.943,249.635,506.134,241.843z">
-                                        </path>
-                                    </g>
-                                </g>
-                            </svg>
-                        </span>
-                    </a>
+                    <a href="https://lyoh001.com/mlportfolio" class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2">ML Portfolio</a>
+                    <a href="https://lyoh001.com/devopsportfolio" class="u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2">DevOps Portfolio</a>
                 </div>
             </div>
         </div>
     </section>
 </body>
-
 </html>
