--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                </video>
             </div>
             <div class="hero-content container">
-               <h2>Transforming Ideas into Intelligent Solutions</h2>
-               <p>Specializing in Machine Learning and DevOps to drive innovation and efficiency</p>
-               <p>Passionate about leveraging advanced technologies</p>
+               <h2>Turning Vision into Innovation:</h2>
+               <p>Expert in Machine Learning & DevOps</p>
+               <p>Driving Efficiency with Advanced Technologies</p>
                <a href="#portfolio" class="cta-button">View My Work</a>
             </div>
          </section>
