--- a/wkls/index.html
+++ b/wkls/index.html
@@ -17,7 +17,7 @@
       <div class="container">
          <header>
             <img src="/wkls/logo.png" alt="Logo" class="logo">
-            <h1>WKLS Report</h1>
+            <h1>WKLS Report Generator</h1>
          </header>
          <main>
             <section class="form-section">
@@ -62,7 +62,7 @@
                <span id="characterCount">0/1250</span>
             </section>
             <section class="button-section">
-               <button id="brushBtn" class="icon-button"><i class="fas fa-magic"></i></button>
+               <button id="brushBtn">AI Suggestion</button>
                <button id="generateReportBtn">Generate Report</button>
             </section>
          </main>
@@ -112,7 +112,7 @@
                          "[High] can competently create and performe alternative versions of stories or action songs, using voice, rhythm and gestures to animate charaters, or using drawing or story maps to creat visual context.",
                          "[High] can competently translate simple Korean words and expressions for peers, teachers and family, noticing how they have similar or different meanings when translated to English or other languages.",
                          "[High] can competently create simple bilingual resources for their learning and for the school community.",
-                         "[High] can reflect on each others’ ways of communicating and their appropriateness in Korean or non-Korean contexts.",
+                         "[High] can reflect on each others ways of communicating and their appropriateness in Korean or non-Korean contexts.",
                          "[High] can competently create own profile using spoken, written or digital forms of expression to identify roles in or memberships of various groups.",
                          "[Medium] can socialise and build relationship with peers and teachers through the exchange of personal in formation in relation to self, friends and family members with support.",
                          "[Medium] can satisfactorily participate in collaborative tasks and shared experiences such as creating and playing simple language games or dialogues that involve simple negotiation, or preparting and presenting a group display.",
@@ -123,7 +123,7 @@
                          "[Medium] can satisfactorily create and performe alternative versions of stories or action songs, using voice, rhythm and gestures to animate charaters, or using drawing or story maps to creat visual context.",
                          "[Medium] can satisfactorily translate simple Korean words and expressions for peers, teachers and family, noticing how they have similar or different meanings when translated to English or other languages.",
                          "[Medium] can satisfactorily create simple bilingual resources for their learning and for the school community.",
-                         "[Medium] can reflect on each others’ ways of communicating and their appropriateness in Korean or non-Korean contexts to some degree.",
+                         "[Medium] can reflect on each others ways of communicating and their appropriateness in Korean or non-Korean contexts to some degree.",
                          "[Medium] can satisfactorily create own profile using spoken, written or digital forms of expression to identify roles in or memberships of various groups.",
                          "[Low] struggles to socialise and build relationship with peers and teachers through the exchange of personal in formation in relation to self, friends and family members.",
                          "[Low] struggles to participate in collaborative tasks and shared experiences such as creating and playing simple language games or dialogues that involve simple negotiation, or preparting and presenting a group display.",
@@ -134,7 +134,7 @@
                          "[Low] struggles to create and performe alternative versions of stories or action songs, using voice, rhythm and gestures to animate charaters, or using drawing or story maps to creat visual context.",
                          "[Low] struggles to translate simple Korean words and expressions for peers, teachers and family, noticing how they have similar or different meanings when translated to English or other languages.",
                          "[Low] struggles to create simple bilingual resources for their learning and for the school community.",
-                         "[Low] is learning to recognise on each others’ ways of communicating and their appropriateness in Korean or non-Korean contexts.",
+                         "[Low] is learning to recognise on each others ways of communicating and their appropriateness in Korean or non-Korean contexts.",
                          "[Low] struggles to create own profile using spoken, written or digital forms of expression to identify roles in or memberships of various groups.",],
                  5: ["[High] can describe experiences of everyday life with confidence, sharing experience and feelings in speaking and writing.",
                          "[High] can collaborate in group tasks and shared experiences with confidence, making collective arrangements.",
@@ -179,7 +179,7 @@
                          "[High] confidently use different greetings and expressions in different social settings where people of different ages and/or different degrees of familarity are involved.",
                          "[High] confidently identify Korean words use in English contexts.",
                          "[High] confidently understand that the world contains many different languages spoken by many different communities of spearkers.",
-                         "[High] confidently identify differences and similarities between their own and others’ languages and cultures.",
+                         "[High] confidently identify differences and similarities between their own and others languages and cultures.",
                          "[Medium] can satisfactorily sing the sounds of letters and syllable blocks of hangeul.",
                          "[Medium] satisfactorily identify -요 at the end of a sentence as indicating some polite meaning.",
                          "[Medium] can satisfactorily use simple vacabulary to identify familiar objects and to describe simple actions or states.",
@@ -187,7 +187,7 @@
                          "[Medium] satisfactorily use different greetings and expressions in different social settings where people of different ages and/or different degrees of familarity are involved.",
                          "[Medium] satiscfactorily identify Korean words use in English contexts.",
                          "[Medium] satisfactorily understand that the world contains many different languages spoken by many different communities of spearkers.",
-                         "[Medium] satisfactorily identify differences and similarities between their own and others’ languages and cultures.",
+                         "[Medium] satisfactorily identify differences and similarities between their own and others languages and cultures.",
                          "[Low] is beginning to sing the sounds of letters and syllable blocks of hangeul.",
                          "[Low] is beginning to identify -요 at the end of a sentence as indicating some polite meaning.",
                          "[Low] is beginning to use simple vacabulary to identify familiar objects and to describe simple actions or states.",
@@ -195,7 +195,7 @@
                          "[Low] is beginning to use different greetings and expressions in different social settings where people of different ages and/or different degrees of familarity are involved.",
                          "[Low] is beginning to identify Korean words use in English contexts.",
                          "[Low] is beginning to understand that the world contains many different languages spoken by many different communities of spearkers.",
-                         "[Low] is beginning to identify differences and similarities between their own and others’ languages and cultures.",
+                         "[Low] is beginning to identify differences and similarities between their own and others languages and cultures.",
                      ],
                  3: ["[High] can competently recognise characteristics of Korean pronunciation and intonation patterns, the alphabetical nature of Hangeul, and the structural features of individual syllable blocks including 받침.",
                          "[High] can competently understand and use key grammatical forms and structures such as basic pronouns and case markers and the polite verb ending –어/아요 in own simple language production, and recognise politeness embedded in humble or honorific forms such as 저 and –(으)세요.",
