--- a/wkls/index.html
+++ b/wkls/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="/wkls/styles.css">
     <link rel="icon" href="/wkls/favicon.png">
     <title>WKLS Report Generator</title>
 </head>
-
 <body>
     <header id="header">
         <nav class="container">
@@ -21,34 +20,22 @@
             </button>
             <ul class="nav-menu">
                 <li><a href="#hero">Home</a></li>
-                <li><a href="#form-section">Form</a></li>
+                <li><a href="#form-section">Metrics</a></li>
                 <li><a href="#skills-section">Skills</a></li>
-                <li><a href="#footer">Contact</a></li>
+                <li><a href="#comment-section">Comment</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="hero">
-            <div class="video-background">
-                <video autoplay muted loop id="video">
-                    <source src="/wkls/bgs.mp4" type="video/mp4">
-                </video>
-                <div class="overlay"></div>
-            </div>
             <div class="hero-content container">
-                <h2>Generate Comprehensive Reports</h2>
-                <p>Effortlessly create detailed student reports with AI assistance</p>
+                <h2>Let's Generate Comprehensive Reports</h2>
+                <p>Effortlessly create detailed student reports with AI assistance.</p>
+                <input type="text" id="studentName" name="studentName" placeholder="Enter student's name">
                 <a href="#form-section" class="cta-button">Get Started</a>
             </div>
         </section>
         <section id="form-section" class="container">
-            <div class="form-card">
-                <h2>Student Information</h2>
-                <label for="studentName">Student's Name</label>
-                <input type="text" id="studentName" name="studentName" placeholder="Enter student's name">
-            </div>
-        </section>
-        <section id="slider-section" class="container">
             <div class="form-card">
                 <h2>Performance Metrics</h2>
                 <div class="performance-metrics">
@@ -91,14 +78,15 @@
         <section id="comment-section" class="container">
             <div class="form-card">
                 <h2>Overall Comment</h2>
-                <textarea id="overallComment"
-                    placeholder="Enter your overall feedback here. Need help? Click the 'Brush' button below for AI-generated suggestions."></textarea>
+                <textarea id="overallComment" placeholder="Enter your overall feedback here. Need help? Click the 'Brush' button below for AI-generated suggestions."></textarea>
                 <span id="characterCount">0/1250</span>
             </div>
         </section>
         <section id="button-section" class="container">
-            <button id="brushBtn" class="button">AI Suggestion</button>
-            <button id="generateReportBtn" class="button">Generate Report</button>
+            <div class="button-group">
+                <button id="brushBtn" class="button">AI Suggestion</button>
+                <button id="generateReportBtn" class="button">Generate Report</button>
+            </div>
         </section>
     </main>
     <footer id="footer">
@@ -107,8 +95,7 @@
                 <li><a href="#" aria-label="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                 <li><a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                 <li><a href="#" aria-label="Website"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
-                <li><a href="mailto:example@example.com" aria-label="Email"><i class="fa fa-envelope"
-                            aria-hidden="true"></i></a></li>
+                <li><a href="mailto:example@example.com" aria-label="Email"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
             </ul>
             <p>&copy; 2024 WKLS. All rights reserved.</p>
         </div>
